--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <section class="container-header-1 ">
      
     <!-- Navbar start-->
-     <nav  class="navbar navbar-expand-lg bg-dark text-white nav-one">
+     <nav  class="navbar navbar-expand-lg nav-one">
       <div class="container-sm">
     <!-- Navbar logo -->
         <div  id="header_LogoDiv" onclick="">
