--- a/index.html
+++ b/index.html
@@ -89,13 +89,14 @@
 </section>
 <!-- navbar section end -->
 
+
 <!-- home section start -->
 <section class="container-sm my-5">
   <div class="row">
   <div class="col-lg-6">
-    <h3>Welcome to</h3>
+    <h3 class="text-white">Welcome to</h3>
      <h1>NEEDLESACK</h1>
-    <p class="p-para-1">Video Games paragraph 
+    <p class="p-para-1 text-white">Video Games paragraph 
       A video game is an electronic game which involves a human interaction with a user interface, which would generate a visual feedback onto a video device. The electronic systems that are used to play the games are known as platforms and
  it could range from small hand held devices to large mainframe computers.</p>
   </div>
@@ -152,7 +153,7 @@
 
 <!-- card section start -->
 <section class="gameList container-sm my-5">
-  <h2>Games</h2>
+  <h2 class="text-white">Games</h2>
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card text-center">
@@ -241,7 +242,7 @@
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2020 Copyright:
-    <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    <a class="text-white" href="https://Needlesack.art/">Needlesack.art</a>
   </div>
   <!-- Copyright -->
 </footer>
