--- a/index.html
+++ b/index.html
@@ -91,61 +91,23 @@
 
 
 <!-- home section start -->
-<section class="container-sm my-5">
+<section class="container-sm my-5 ">
   <div class="row">
   <div class="col-lg-6">
-    <h3 class="text-white">Welcome to</h3>
-     <h1>NEEDLESACK</h1>
-    <p class="p-para-1 text-white">Video Games paragraph 
-      A video game is an electronic game which involves a human interaction with a user interface, which would generate a visual feedback onto a video device. The electronic systems that are used to play the games are known as platforms and
- it could range from small hand held devices to large mainframe computers.</p>
+    <h3 class="text-white"></h3>
+     <h1>Welcome to</h1>
+    <p class="p-para-1 text-white">We are the creators of real tuk racing and welcome you to our site. we are here to revolutioned the world.</p>
   </div>
   <!-- image slider start -->
   <div class="col-lg-6">
-<div id="carouselExampleCrossfade" class="carousel slide carousel-fade" data-mdb-ride="carousel">
-  <div class="carousel-indicators">
-    <button
-      type="button"
-      data-mdb-target="#carouselExampleCrossfade"
-      data-mdb-slide-to="0"
-      class="active"
-      aria-current="true"
-      aria-label="Slide 1"
-    ></button>
-    <button
-      type="button"
-      data-mdb-target="#carouselExampleCrossfade"
-      data-mdb-slide-to="1"
-      aria-label="Slide 2"
-    ></button>
-    <button
-      type="button"
-      data-mdb-target="#carouselExampleCrossfade"
-      data-mdb-slide-to="2"
-      aria-label="Slide 3"
-    ></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://mdbcdn.b-cdn.net/img/new/slides/041.webp" class="d-block w-100" alt="Wild Landscape"/>
-    </div>
-    <div class="carousel-item">
-      <img src="https://mdbcdn.b-cdn.net/img/new/slides/042.webp" class="d-block w-100" alt="Camera"/>
-    </div>
-    <div class="carousel-item">
-      <img src="https://mdbcdn.b-cdn.net/img/new/slides/043.webp" class="d-block w-100" alt="Exotic Fruits"/>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-mdb-target="#carouselExampleCrossfade" data-mdb-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-mdb-target="#carouselExampleCrossfade" data-mdb-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-</div> <!-- image slider end  -->
+    <div id="intro-video-container">
+      <video autoplay loop muted>
+    <source src="videos/intro.mp4" type="video/mp4">
+  
+      </video>
+     </div>
+   
+
   </div>
 </section>
 <!-- home section end -->
@@ -159,7 +121,7 @@
     <div class="card text-center">
       <img src="images/RTR-icon.png" class="mx-auto card-img-top img-fluid pt-2" alt="Hollywood Sign on The Hill"/>
       <div class="card-body ">
-        <h5 class="card-title text-center">NEEDLESACK</h5>
+        <h5 class="card-title text-center">Real Tuk Racing</h5>
         <div class="d-flex justify-content-center">
                     <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style-h1 ">
                     Play Now</button>  
