CHG | add css constatnt

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class="card text-center">
       <img src="images/RTR-icon.png" class="mx-auto card-img-top img-fluid pt-2" alt="Hollywood Sign on The Hill"/>
       <div class="card-body ">
-        <h5 class="card-title text-center">Real Tuk Racing</h5>
+        <h5 class="card-title text-center text-light">Real Tuk Racing</h5>
         <div class="d-flex justify-content-center">
                     <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style-h1 ">
                     Play Now</button>  
