--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
 <!-- home section end -->
 
 
+<div class="vedio-container container-sm my-5">
+<iframe width="1060" height="515" class="d-flex justify-content-center" src="https://www.youtube.com/embed/148Byz38_jM" title="YouTube video player" frameborder="0" allow="accelerometer;
+ autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+</div>
+
 <!-- card section start -->
 <section class="gameList container-sm my-5">
   <h2 class="text-white">Games</h2>
@@ -123,9 +129,18 @@
       <div class="card-body ">
         <h5 class="card-title text-center text-light">Real Tuk Racing</h5>
         <div class="d-flex justify-content-center">
+          <div class="row">
+            <div class="col-md-4">
+                     <a href="https://play.google.com/store/apps/details?id=com.NeedleSack.RealTukRacing&hl=en&gl=US">
+                     <img class="playstore-icon" src="https://img.freepik.com/free-icon/playstore_318-326133.jpg" alt="Image description">
+                     </a>
+            </div>
+            <div class="col-md-8 pt-2">     
                     <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style-h1 ">
-                    Play Now</button>  
-                    </div>
+                    Play Now</button>
+            </div> 
+          </div>
+          </div>
         </div> 
     </div>
   </div>
