--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
   <!-- MDB -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css" rel="stylesheet" />
 
-  <!-- <globel style sheet> -->
-  <link rel="stylesheet" href="./global-styles.css" />
-
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -24,6 +21,11 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet" />
 
+  <!-- animate.css -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
  <!-- <custom style sheet> -->
   <link rel="stylesheet" type="text/css" href="GamingSite.css"/>
 
@@ -39,12 +41,12 @@
       <div class="container-sm">
     <!-- Navbar logo -->
         <div  id="header_LogoDiv" onclick="">
-        <img id="header_SubLogoImage" class="navbar-brand1 img-fluid"  src="./images/neadlesack.png" alt="Image">
+        <img id="header_SubLogoImage" class="navbar-brand1 img-fluid"  src="./images/Neadlesack1.png" alt="Image">
         </div>
     
      <!-- Toggle button mobile view start -->
         <button
-                class="navbar-toggler navbar-toggler1 toggler-icon-style-h1"
+                class="navbar-toggler navbar-toggler1 toggler-icon-style"
                 type="button"
                 data-mdb-toggle="collapse"
                 data-mdb-target="#header_ColSpaceDiv"
@@ -63,7 +65,7 @@
          
          <!-- <games> -->
             <li id="header_NavLink_2 " class="nav-item " onclick="">
-              <a id="header_SubNavLink_2" class="nav-link nav-link1 nav-one-link active " aria-current="page" href="gamelist" ><p class="p-header-1 me-3">Games</p></a>
+              <a id="header_SubNavLink_2" class="nav-link nav-link1 nav-one-link active " aria-current="page" href="#" ><p class="p-header-1 me-3">Games</p></a>
             </li>
 
          <!-- <pricing> -->
@@ -74,7 +76,7 @@
          <!-- button -->
             <li >
                <div class="col-sm-12 d-flex justify-content-center">
-                    <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style-h1 ">
+                    <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style ">
                     Start Free</button>   
                </div>    
             </li>
@@ -95,7 +97,7 @@
   <div class="row">
   <div class="col-lg-6">
     <h3 class="text-white"></h3>
-     <h1>Welcome to</h1>
+     <h1 class="animate__animated animate__tada">Welcome to</h1>
     <p class="p-para-1 text-white">We are the creators of real tuk racing and welcome you to our site. we are here to revolutioned the world.</p>
   </div>
   <!-- image slider start -->
@@ -112,12 +114,13 @@
 </section>
 <!-- home section end -->
 
-
+<!-- vedio section start -->
 <div class="vedio-container container-sm my-5">
-<iframe width="1060" height="515" class="d-flex justify-content-center" src="https://www.youtube.com/embed/148Byz38_jM" title="YouTube video player" frameborder="0" allow="accelerometer;
- autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
+<div class="ratio ratio-16x9">
+  <iframe src="https://www.youtube.com/embed/148Byz38_jM" title="YouTube video" allowfullscreen></iframe>
 </div>
+</div>
+<!-- vedio section end -->
 
 <!-- card section start -->
 <section class="gameList container-sm my-5">
@@ -136,7 +139,7 @@
                      </a>
             </div>
             <div class="col-md-8 pt-2">     
-                    <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style-h1 ">
+                    <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style ">
                     Play Now</button>
             </div> 
           </div>
@@ -148,11 +151,20 @@
     <div class="card text-center">
       <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="mx-auto card-img-top img-fluid pt-2" alt="Palm Springs Road"/>
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Title</h5>
         <div class="d-flex justify-content-center">
-                    <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style-h1 ">
-                    Play Now</button>  
-                    </div>
+            <div class="row">
+            <div class="col-md-4">
+                     <a href="#">
+                     <img class="playstore-icon" src="https://img.freepik.com/free-icon/playstore_318-326133.jpg" alt="Image description">
+                     </a>
+            </div>
+            <div class="col-md-8 pt-2">     
+                    <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style ">
+                    Play Now</button>
+            </div> 
+          </div>        
+        </div>
         </div> 
       </div>
     </div>
@@ -160,11 +172,20 @@
     <div class="card text-center">
       <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="mx-auto card-img-top img-fluid pt-2" alt="Los Angeles Skyscrapers"/>
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Title</h5>
         <div class="d-flex justify-content-center">
-                    <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style-h1 ">
-                    Play Now</button>  
-                    </div>
+            <div class="row">
+             <div class="col-md-4">
+                     <a href="#">
+                     <img class="playstore-icon" src="https://img.freepik.com/free-icon/playstore_318-326133.jpg" alt="Image description">
+                     </a>
+            </div>
+            <div class="col-md-8 pt-2">     
+                    <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style ">
+                    Play Now</button>
+            </div> 
+          </div>     
+          </div>
         </div> 
       </div>
     </div>
@@ -177,7 +198,7 @@
 
 <!-- Footer section start -->
 <section class="footer-section">
-<footer class="bg-dark text-center text-white">
+<footer class=" text-center text-white">
   <!-- Grid container -->
   <div class="container p-4 pb-0">
     <!-- Section: Social media -->
@@ -229,8 +250,6 @@
 
 <!-- scripts -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.js"></script>
-<script src="header-1.js"></script>   
-
 </body>
 
 </html>
