--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <li >
                <div class="col-sm-12 d-flex justify-content-center">
                     <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style ">
-                    Start Free</button>   
+                    Start</button>   
                </div>    
             </li>
       
@@ -133,12 +133,12 @@
         <h5 class="card-title text-center text-light">Real Tuk Racing</h5>
         <div class="d-flex justify-content-center">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-lg-4">
                      <a href="https://play.google.com/store/apps/details?id=com.NeedleSack.RealTukRacing&hl=en&gl=US">
-                     <img class="playstore-icon" src="https://img.freepik.com/free-icon/playstore_318-326133.jpg" alt="Image description">
+                     <img class="playstore-icon" src="https://icon-library.com/images/google-play-store-icon/google-play-store-icon-3.jpg" alt="Image description">
                      </a>
             </div>
-            <div class="col-md-8 pt-2">     
+            <div class="col-lg-8">     
                     <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style ">
                     Play Now</button>
             </div> 
@@ -154,12 +154,12 @@
         <h5 class="card-title">Title</h5>
         <div class="d-flex justify-content-center">
             <div class="row">
-            <div class="col-md-4">
+            <div class="col-lg-4">
                      <a href="#">
-                     <img class="playstore-icon" src="https://img.freepik.com/free-icon/playstore_318-326133.jpg" alt="Image description">
+                     <img class="playstore-icon" src="https://icon-library.com/images/google-play-store-icon/google-play-store-icon-3.jpg" alt="Image description">
                      </a>
             </div>
-            <div class="col-md-8 pt-2">     
+            <div class="col-lg-8">     
                     <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style ">
                     Play Now</button>
             </div> 
@@ -175,13 +175,13 @@
         <h5 class="card-title">Title</h5>
         <div class="d-flex justify-content-center">
             <div class="row">
-             <div class="col-md-4">
+             <div class="col-lg-4">
                      <a href="#">
-                     <img class="playstore-icon" src="https://img.freepik.com/free-icon/playstore_318-326133.jpg" alt="Image description">
+                     <img class="playstore-icon" src="https://icon-library.com/images/google-play-store-icon/google-play-store-icon-3.jpg" alt="Image description">
                      </a>
             </div>
-            <div class="col-md-8 pt-2">     
-                    <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style ">
+            <div class="col-lg-8">     
+                    <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style">
                     Play Now</button>
             </div> 
           </div>     
