--- a/index.html
+++ b/index.html
@@ -117,7 +117,11 @@
 <!-- vedio section start -->
 <div class="vedio-container container-sm my-5">
 <div class="ratio ratio-16x9">
-  <iframe src="https://www.youtube.com/embed/148Byz38_jM" title="YouTube video" allowfullscreen></iframe>
+  <video autoplay loop muted>
+    <source src="videos/game-intro.mp4" type="video/mp4">
+  
+      </video>
+  <!-- <iframe src="https://www.youtube.com/embed/148Byz38_jM" title="YouTube video" allowfullscreen></iframe> -->
 </div>
 </div>
 <!-- vedio section end -->
