CHG | add game link

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                      </a>
             </div>
             <div class="col-lg-6">     
-                    <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style ">
+                    <button id="header_Button_1" onclick="window.location.href='https://needlesack.art/real-tuk-racing/';"  type="button" class="btn btn-primary  btn-style ">
                     Play Now</button>
             </div> 
           </div>
@@ -152,7 +152,7 @@
     </div>
   </div>
   <div class="col">
-    <div class="card text-center">
+    <!-- <div class="card text-center">
       <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="mx-auto card-img-top img-fluid pt-2" alt="Palm Springs Road"/>
       <div class="card-body">
         <h5 class="card-title">Title</h5>
@@ -171,9 +171,9 @@
         </div>
         </div> 
       </div>
-    </div>
+    </div> -->
   <div class="col">
-    <div class="card text-center">
+    <!-- <div class="card text-center">
       <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="mx-auto card-img-top img-fluid pt-2" alt="Los Angeles Skyscrapers"/>
       <div class="card-body">
         <h5 class="card-title">Title</h5>
@@ -192,7 +192,7 @@
           </div>
         </div> 
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 
