--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
  <!-- <custom style sheet> -->
   <link rel="stylesheet" type="text/css" href="GamingSite.css"/>
 
+  <!-- play fab CDN -->
+  <script type="text/javascript" src="https://download.playfab.com/PlayFabClientApi.js"></script>
+    <!-- leader board js file -->
+  <script src="js/playfab.js"></script>
+
 </head>
 
 <body>
@@ -77,7 +82,7 @@
             <li >
                <div class="col-sm-12 d-flex justify-content-center">
                     <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style ">
-                    Start</button>   
+                    Play</button>   
                </div>    
             </li>
       
@@ -98,7 +103,7 @@
   <div class="col-lg-6">
     <h3 class="text-white"></h3>
      <h1 class="animate__animated animate__tada">Welcome to</h1>
-    <p class="p-para-1 text-white">We are the creators of real tuk racing and welcome you to our site. we are here to revolutioned the world.</p>
+    <p class="p-para-1 text-white">We are the creators of real tuk racing and welcome you to our site. we are here to revolutioned the gaming world.</p>
   </div>
   <!-- image slider start -->
   <div class="col-lg-6">
@@ -125,7 +130,22 @@
 </div>
 </div>
 <!-- vedio section end -->
-
+<!-- leader board table section -->
+<section class="container-sm my-5 ">
+<table id="myTable" class="table align-middle mb-0 bg-Secondary">
+		<thead>
+			<tr class="table-danger">
+				<th>Rank</th>
+				<th>Name</th>
+				<th>Coins</th>
+			</tr>
+		</thead>
+		<tbody>
+		
+		</tbody>
+	</table>
+  </section>
+  <!-- leader board section end -->
 <!-- card section start -->
 <section class="gameList container-sm my-5">
   <h2 class="text-white">Games</h2>
