add table color

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 </section>
 <!-- home section end -->
 
+
 <!-- vedio section start -->
 <div class="vedio-container container-sm my-5">
 <div class="ratio ratio-16x9">
@@ -130,9 +131,11 @@
 </div>
 </div>
 <!-- vedio section end -->
+
+
 <!-- leader board table section -->
 <section class="container-sm my-5 ">
-<table id="myTable" class="table align-middle mb-0 bg-Secondary">
+<table id="myTable" class="table table-leaderboard align-middle mb-0">
 		<thead>
 			<tr class="table-danger">
 				<th>Rank</th>
@@ -146,6 +149,9 @@
 	</table>
   </section>
   <!-- leader board section end -->
+
+
+
 <!-- card section start -->
 <section class="gameList container-sm my-5">
   <h2 class="text-white">Games</h2>
