CHG | convert videos to webm and logo to webp

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="container-sm">
     <!-- Navbar logo -->
         <div  id="header_LogoDiv" onclick="">
-        <img id="header_SubLogoImage" class="navbar-brand1 img-fluid"  src="./images/Neadlesack1.png" alt="Image">
+        <img id="header_SubLogoImage" class="navbar-brand1 img-fluid"  src="./images/Neadlesack1.webp" alt="Image">
         </div>
     
      <!-- Toggle button mobile view start -->
@@ -70,18 +70,18 @@
          
          <!-- <games> -->
             <li id="header_NavLink_2 " class="nav-item " onclick="">
-              <a id="header_SubNavLink_2" class="nav-link nav-link1 nav-one-link active " aria-current="page" href="#" ><p class="p-header-1 me-3">Games</p></a>
+              <a id="header_SubNavLink_2" class="nav-link nav-link1 nav-one-link active " aria-current="page" href="#play-button" ><p class="p-header-1 me-3">Games</p></a>
             </li>
 
          <!-- <pricing> -->
             <li id="header_NavLink_3 " class="nav-item" onclick="">
-              <a id="header_SubNavLink_3" class="nav-link nav-link1 nav-one-link active" href="#" ><p class="p-header-1 me-3">Pricing</p></a>
+              <a id="header_SubNavLink_3" class="nav-link nav-link1 nav-one-link active" href="#leader-board" ><p class="p-header-1 me-3">LeaderBoard</p></a>
             </li>
 
          <!-- button -->
             <li >
                <div class="col-sm-12 d-flex justify-content-center">
-                    <button id="header_Button_1" href="#"  type="button" class="btn btn-primary  btn-style ">
+                    <button id="header_Button_1" href="#play-button"  type="button" class="btn btn-primary  btn-style ">
                     Play</button>   
                </div>    
             </li>
@@ -109,7 +109,7 @@
   <div class="col-lg-6">
     <div id="intro-video-container">
       <video autoplay loop muted>
-    <source src="videos/intro.mp4" type="video/mp4">
+    <source src="videos/intro.webm" type="video/mp4">
   
       </video>
      </div>
@@ -123,6 +123,7 @@
 <!-- vedio section start -->
 <div class="vedio-container container-sm my-5">
 <div class="ratio ratio-16x9">
+  <div class="gradient-border"></div>
   <video autoplay loop muted>
     <source src="videos/game-intro.mp4" type="video/mp4">
   
@@ -134,7 +135,8 @@
 
 
 <!-- leader board table section -->
-<section class="container-sm my-5 ">
+<section id="leader-board" class="container-sm my-5 ">
+  <h2 class="text-white">Top Players This Week</h2>
 <table id="myTable" class="table table-leaderboard align-middle mb-0">
 		<thead>
 			<tr class="table-danger">
@@ -153,7 +155,7 @@
 
 
 <!-- card section start -->
-<section class="gameList container-sm my-5">
+<section id="play-button" class="gameList container-sm my-5">
   <h2 class="text-white">Games</h2>
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
