--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
         ><i class="fab fa-linkedin-in"></i
       ></a>
 
-      <!-- Github -->
-      <!-- <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-instagram"></i
-      ></a> -->
+      <!-- YouTube -->
+      <a class="btn btn-outline-light btn-floating m-1" href="https://www.youtube.com/@needlesack2677" role="button"
+        ><i class="fab fa-youtube"></i
+      ></a>
     </section>
     <!-- Section: Social media -->
   </div>
